# flexible-perceptual-inference

./: .gitattributes  .gitignore  README.md  pyproject.toml
enzyme/: __init__.py  colors.py  logging.conf  matplotlibrc  plot_helper.py
enzyme/scripts/: config.py  fig_behavior_net_batch.ipynb  fig_mice.py  fig_pca batch.ipynb  fig_tracking batch.ipynb  plot_config.py  plotters.py
enzyme/src/: helper.py  mcmc.py
enzyme/src/main/: manager.py  network_data_struct.py  run_simulation.py  train_random_LSTM.py  train_random_ctx_LSTM.py  train_trained_LSTM.py
enzyme/src/mouse_task/: analytical_analysis.py  bayesian_agent.py  bayesian_analysis.py  data_processing.py  data_structures.py  debugger.ipynb  flow_fields.py  get_data.py  helper_functions.py  mouse_plotting.py  mouse_task.py  net_dynamics.py  trajectory_processing.py
enzyme/src/mouse_world/: environment.py  lib.py
enzyme/src/network/: Actor_Critic.py  Actor_Critic_numpy.py  forward_backward.py  forward_backward_numpy.py  handmade.py  rnn.py  train_mem_RNN.ipynb
